--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -520,6 +520,7 @@
         "invalid_price": "Precio inválido",
         "invert": "Invierta el precio",
         "latest": "Ultimo Precio",
+        "limit": "Limit",
         "lowest_ask": "Pedido más bajo",
         "maintenance": "Precio de llamada de mantenimiento",
         "market": "Mercado",
@@ -589,6 +590,7 @@
         "receive": "Recibir",
         "remove": "Quitar",
         "rsi": "Índice de Fuerza Relativa",
+        "scaled": "Scaled",
         "search": "Busque más mercados aquí",
         "sell": "Vender",
         "sell_description": "Venda %(baseAsset)s %(baseName)s para %(quoteAsset)s %(quoteName)s",
@@ -665,6 +667,10 @@
             }
         },
         "settle": "Precio de Liquidación",
+        "settle_better_marketprice": "Market price is in favour",
+        "settle_better_settleprice": "Settlement price is in favour",
+        "settle_delay": "This asset will settle in %(hours)s hours",
+        "settle_delay_globally_settled": "This asset will settle instantly",
         "settle_globally_settled": "Resolver al instante",
         "settle_globally_settled_tooltip": "Este activo se liquida globalmente. Puede liquidarlo instantáneamente para el precio de liquidación global (vea el encabezado de intercambio o los detalles del activo)",
         "settle_orders": "Establecer órdenes",
@@ -1102,6 +1108,9 @@
         "cancel": "Cancelar",
         "close": "Cerrar",
         "confirm": "Confirmar",
+        "field_type": {
+            "account": "account"
+        },
         "help": "Ayudo",
         "return_to_top": "Regresa hacia arriba",
         "scan_qr_code": "Escanar codigo de QR",
@@ -1424,6 +1433,7 @@
         "exchange_insufficient_funds_for_fees": "Fondos insuficientes para pagar las tarifas",
         "exchange_insufficient_funds_to_place_order": "Fondos insuficientes para realizar el pedido, necesita al menos %(amount)s $(symbol)s",
         "exchange_unknown_error_place_order": "Error desconocido. No se pudo realizar el pedido de %(amount)s %(symbol)s",
+        "exchange_unknown_error_place_scaled_order": "Unknown error. Failed to place Scaled Order",
         "import_keys_already_imported": "Esta billetera ya ha sido importada.",
         "import_keys_error": "Cuenta %(account_name)s tuvo un error de importación de clave privada: %(error_msg)s",
         "import_keys_error_unknown": "Error de importación de clave: %(error_msg)s",
@@ -1598,6 +1608,30 @@
         "walletNote": "Tenga en cuenta que BitShares no almacena las contraseñas de los usuarios y no pudo recuperar las cuentas de los usuarios después de la pérdida de la contraseña.",
         "whyBinFile": "¿Por qué necesito un archivo .bin?"
     },
+    "scaled_orders": {
+        "action": {
+            "buy": "Buy",
+            "sell": "Sell",
+            "title": "Action"
+        },
+        "distribution": {
+            "flat": "Flat",
+            "title": "Distribution"
+        },
+        "fee": "Fee",
+        "market_fee": "Market Fee",
+        "order_count": "Order Count",
+        "order_s": "Order(s)",
+        "please_log_in": "You need to login before use Scaled Orders",
+        "preview_table": {
+            "price": "Price"
+        },
+        "price_lower": "Price Lower",
+        "price_upper": "Price Upper",
+        "quantity": "Quantity",
+        "title": "Scaled Order",
+        "total": "Total"
+    },
     "settings": {
         "access": "Acceso",
         "access_text": "",
@@ -1716,6 +1750,9 @@
             "action": "Peer 1 (%(peer_left)s) offers to send %(assets_left)s to Peer 2 (%(peer_right)s) and receives %(assets_right)s in return. ",
             "add_escrow": "Add escrow",
             "add_escrow_tooltip": "Adds or removes an escrow to this barter. This escrow will have to approve the resulting proposal as well. The escrow can serve as a witness only, or also be the custodian of Peer 1's funds.",
+            "balance_warning": "Balance Warning",
+            "balance_warning_line": "wants to send a total of %(asset_amount)s %(asset_symbol)s, but only has %(asset_balance)s %(asset_symbol)s",
+            "balance_warning_tooltip": "%(peer)s does not have enough funds to execute the transfers when the proposal gets approved and executes. This is not an issue when creating the proposal, but the balances must match when executed",
             "bartering_asset": "Bartering asset",
             "description": "Le permite sugerir un intercambio de activos con otra cuenta, esto sucede fuera del libro de órdenes y puede incluir un depósito en garantía.",
             "error_fill_in_escrow_name": "Please fill in the account name of the escrow",
@@ -1795,8 +1832,33 @@
             "title_long": "Create a Collateralized Debt Position"
         },
         "direct_debit": {
+            "amount_to_withdraw": "Amount to collect",
+            "authorized_account": "Payee",
+            "authorizing_account": "Payer",
+            "claim": "Claim",
+            "claim_funds": "Claim funds",
+            "create": "Create",
+            "create_new_mandate": "Create authorization",
+            "current_period_expires": "Current period ends",
+            "delete": "Delete",
             "description": "Configure un mandato de débito directo para pagos recurrentes. El mandato le permite a otra cuenta transferir fondos de su cuenta, con un límite en la cantidad por intervalos de tiempo definidos.",
-            "title": "Débito directo"
+            "expires": "Expires",
+            "first_period_not_started": "First period has not started!",
+            "limit": "limit",
+            "limit_per_period": "Maximum amount per period",
+            "num_of_periods": "Number of periods",
+            "period": "Specify period",
+            "start_date": "First period starts on",
+            "title": "Débito directo",
+            "tooltip": {
+                "authorized_account": "The account that is eligible to collect from your account.",
+                "limit_per_period": "The payee may collect a maximum amount of the specified asset (up to) per period. The payee can only collect once per period, even if not collected in full.",
+                "num_of_periods": "After the start time this amount of periods are available consecutively.",
+                "period": "One period lasts the indicated time interval, e.g. 2 weeks.",
+                "start_time": "The start time of the first period must be in the future when broadcasting."
+            },
+            "update": "Update",
+            "update_mandate": "Update existing authorization"
         },
         "paper_wallet": {
             "description": "Cree un PDF con las claves de su cuenta impresas (texto plano y código de barras). Si la cartera está desbloqueada, también se agregan las claves privadas.",
@@ -1847,7 +1909,6 @@
         "latest_price": "Este es el utlimo precio en el mercado.",
         "legacy_explanation": "Hides proposals that are duplicates, spam or have been started but not active for longer than 2 months.",
         "login": "Esta billetera de BitShares no ofrece un inicio de sesión tradicional sino que simplemente bloquea o desbloquea una billetera que es <b>solo</b> almacenada localmente en su navegador.<br/><br/> Cada vez que cierre la billetera, esta se bloqueará y se cerrerá efectivamente la sesión.",
-        "login_required": "Please login to the selected account to perform this action",
         "login-tooltip": {
             "incorrectPassword": {
                 "begin": "Ingrese otra contraseña o intente ",
@@ -1876,6 +1937,7 @@
                 "model": "Billetera de nubes"
             }
         },
+        "login_required": "Please login to the selected account to perform this action",
         "margin_price": "Este es el precio máximo que una posición a margen puede pagar. Es tambien llamado precio Squeeze.",
         "market_fee": "El proprietario de %(asset)s cobra una comisiòn de mercado de %(percent)s%% para pedidos de compra. Esta comisìòn se deducirá de la cantidad que reciba cuando su pedido se ejecuta, no se paga al hacer un pedido.",
         "memo_tip": "En el campo notas (memo) puede incluir cualquier mensaje. Las notas son opcionales pero generalmente se requieren para transferencias a intercambios.",
@@ -1883,6 +1945,7 @@
         "no_price": "No hay un precio reciente disponible para este activo que pueda usarse para estimar su valor.",
         "nodes_popup": "Haga clic aquí para abrir la ventana emergente de configuración de acceso que le permite cambiar los nodos si es necesario",
         "over_limit": "El puente no tiene suficiente del activo deseado para esta orden de compra",
+        "own_account": "You hold keys for this account",
         "propose_scam": "¡Esta propuesta fue creada por un estafador conocido, no la aprueba!",
         "propose_tip": "Proponer otro usuario para iniciar una transacción",
         "propose_unknown": "This proposal was created by or targets an unknown account (not in contacts or whitelist). Beware of scam attempts and carefully check the contained operations.",
@@ -1895,6 +1958,8 @@
             "walletModel": "La billetera local tiene la mejor seguridad, pero está restringida a su navegador y computadora actuales. Para migrar la billetera a otro navegador o computadora, puede usar el archivo de respaldo o brainkey.",
             "whyBinFile": "Archivo .bin: es un archivo de copia de seguridad. El archivo está cifrado con su contraseña y contiene todas las claves privadas de sus cuentas. Este archivo debe ser cargado durante el proceso de inicio de sesión."
         },
+        "required_input": "Field requires a valid %(type)s",
+        "scam_account": "Account is suspected scammer",
         "self_help": "Dependiendo del panel visible actualmente, esto abre una guía de ayuda con explicaciones sobre lo que ve actualmente o la sección de ayuda general de la billetera",
         "settle": "El settling te permitirá de convertir tus propriedades de %(asset)s en %(backingAsset)s después de un retraso de %(settleDelay)s horas, a un precio igual al precio dado en ese momento.",
         "settle_price": "Este es el precio al que se ejecutarán los pedidos colocados.",
@@ -1905,6 +1970,7 @@
         "sync_yes": "El nodo actual está sincronizado con la cadena de bloques",
         "target_collateral_ratio": "Establecer una relación de garantía objetivo puede ayudar a no vender toda la posición a la vez.<br /><br /><strong>Vende tan poco estableciendo el objetivo debajo de MCR (ex. 1.5)</strong><br /><br /><strong>Venda poco pero vuelva a disminuir las posibles llamadas de margen al establecerlo más alto que MCR (ex. 3)",
         "transfer_actions": " Haga clic aquí para hacer una transferencia, o para depositar / retirar aquellos activos que lo soportan.",
+        "unlock_account_name": "Click to edit the account name, e.g. when your account is set as permission of another account.",
         "update_position": "Haga clic aquí para actualizar su posición. En cualquier momento puede cambiar los neveles de deuda y/o el colateral de su posición.",
         "withdraw_address": "Si aún no tienes una %(asset)s dirección, busca un proveedor de billetera y crea uno para completar el retiro del saldo.",
         "withdraw_full": "Haga clic para retirar el saldo completo"
@@ -2114,6 +2180,52 @@
         "total_x_items": "Total de %(count)s articulos",
         "total_x_markets": "Total de %(count)s mercados",
         "total_x_operations": "Total de %(count)s operaciones"
+    },
+    "validation": {
+        "messages": {
+            "balance": "Insufficient balance. Available only: %(balance)s %(symbol)s",
+            "email": "The field should be email",
+            "emailNamed": "%(name)s should be email",
+            "float": "The field should be float",
+            "floatNamed": "%(name)s should be float",
+            "integer": "The field should be integer",
+            "integerNamed": "%(name)s should be integer",
+            "max": "The field should be less than %(max)s",
+            "maxNamed": "%(name)s should be less than %(max)s",
+            "min": "The field should higher than %(min)s",
+            "minNamed": "%(name)s should be higher than %(min)s",
+            "number": "The field should be number",
+            "numberNamed": "%(name)s should be number",
+            "oneOf": "The field should be one of: %(list)s",
+            "oneOfNamed": "%(name)s should be one of: %(list)s",
+            "range": "The field should be in range from %(min)s to %(max)s",
+            "rangeNamed": "%(name)s should in range from %(min)s to %(max)s",
+            "required": "The field is required",
+            "requiredNamed": "%(name)s is required",
+            "test": "",
+            "types": {
+                "array": "The field should be array",
+                "arrayNamed": "%(name)s should be array",
+                "boolean": "The field should be boolean",
+                "booleanNamed": "%(name)s should be boolean",
+                "date": "The field should be date",
+                "dateNamed": "%(name)s should be date",
+                "enum": "The field should be one of %(list)s",
+                "enumNamed": "%(name)s should be one of %(list)s",
+                "hex": "The field should be hex",
+                "hexNamed": "%(name)s should be hex",
+                "method": "The field should be method",
+                "methodNamed": "%(name)s should be method",
+                "object": "The field should be object",
+                "objectNamed": "%(name)s should be object",
+                "regexp": "The field should be regexp",
+                "regexpNamed": "%(name)s should be regexp",
+                "string": "The field should be string",
+                "stringNamed": "%(name)s should be string"
+            },
+            "url": "The field should be url",
+            "urlNamed": "%(name)s should be url"
+        }
     },
     "walkthrough": {
         "buy_form": "Coloque las órdenes de compra usando este formulario.",
