- Add share icon to activity tab - Add modal on export button click - Add textbox for es endpoint - Add button for coinbase export - Add button for full/raw export - Add functionality for raw export - Externalize export functionality into class - Add English translations for new UI

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1,7 +1,7 @@
 {
     "account": {
         "accounts": "Accounts",
-        "activity": "Activity",
+        "activity": "Activity {icon}",
         "advanced": "Advanced",
         "as_collateral": "Collateral",
         "asset": "Asset",
@@ -114,6 +114,11 @@
             "memo_key": "Memo Key",
             "num_committee": "Desired Committee Members",
             "num_witnesses": "Desired Witnesses"
+        },
+        "export_modal": {
+            "title": "History Export",
+            "full_report": "Generate Full Report",
+            "coinbase_report": "Generate Coinbase Report"
         },
         "orders": "Orders",
         "other_scam": "This account is not known to be an official account, please verify the destination before transferring",
