Added label Free and added selected user if only 1 account exists

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2174,6 +2174,7 @@
         },
         "explict_price": "Explict price:",
         "fee": "Fee",
+        "free": "Free",
         "final": "Final balance",
         "from": "From",
         "header": "Transfer details",
